# mmit2

./: .gitignore  README.md  pyproject.toml
configs/: colab_dora.yaml  colab_dora_smoke.yaml  colab_freeze_smoke.yaml  colab_l2t_lora_smoke.yaml  colab_l2t_qlora_smoke.yaml  colab_lora.yaml  colab_lora_debug.yaml  colab_lora_full_eval.yaml  colab_lora_full_train.yaml  colab_lora_smoke.yaml  colab_lora_tiny_smoke.yaml  colab_qlora_smoke.yaml  local_dora.yaml  local_freeze.yaml  local_l2t.yaml  local_lora.yaml  local_qlora.yaml  ssh_baseline_eval.yaml  ssh_dora.yaml  ssh_experiment_eval.yaml  ssh_freeze.yaml  ssh_l2t.yaml  ssh_lora.yaml  ssh_lora_textvqa.yaml  ssh_qlora.yaml
examples/: chat_template_tokenize_collate_guide.html  colab_lora_debug.py  colab_lora_fullrun.py  colab_lora_train.py  colab_smoke_matrix.py  inspect_hf_dataset.py  mmit2_data_package_guide.html  mmit2_lora_package_guide.html  mmit2_lora_real_example_walkthrough.html
scripts/: jarvislabs_eval_experiment.sh  jarvislabs_lora_100.sh  jarvislabs_lora_full.sh
src/mmit2/: __init__.py  experiment.py  fullrun.py  modeling.py  results.py  trainrun.py
src/mmit2/config/: __init__.py  model_layouts.py  model_layouts.yaml  runtime.py  training_config.py
src/mmit2/data/: __init__.py  types.py
src/mmit2/debug/: __init__.py  __main__.py  colab.py
tests/: test_mmit2_chat_template.py  test_mmit2_eval.py  test_mmit2_freeze.py  test_mmit2_fullrun.py  test_mmit2_hf_adapter.py  test_mmit2_hf_datasets.py  test_mmit2_hf_token_cli.py  test_mmit2_imports.py  test_mmit2_l2t.py  test_mmit2_modeling.py
(+50 files in other folders)
