[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmit2"
version = "0.1.0"
description = "Multimodal Instruction Tuning library v2 — pluggable training, inference, and evaluation for VLMs"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.37",
    "pillow>=9.0",
    "peft>=0.7",
    "accelerate>=0.21",
    "datasets>=2.14",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
finetune = ["bitsandbytes>=0.41"]
remote = ["paramiko>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mmit2 = ["config/*.yaml"]
